src/css/main.css
:root {

  --color-sigai-primary: #53298C;
  --color-sigai-primary-tint: #7B559A;
  --color-sigai-primary-shade: #3f1678;
  --color-sigai-primary-contrast: #FFFFFF;
  --color-sigai-primary-rgb: 83, 41, 140;
  --color-sigai-primary-filter: invert(40%) sepia(5%) saturate(4318%) hue-rotate(230deg) brightness(93%) contrast(92%);
}

::-webkit-scrollbar {

  width: 0.6em;
  background: transparent;
}

::-webkit-scrollbar-thumb {

  background: rgba(var(--color-sigai-primary-rgb), 0.7);
  border-radius: 10px;
}

::-webkit-scrollbar-thumb:hover {

  background: rgba(var(--color-sigai-primary-rgb), 1);
  border-radius: 0;
}

body {

  overflow-y: overlay;
  background-color: transparent !important;
}


html {

  scroll-behavior: smooth;
}

nav {

  z-index: 1;
  background-color: transparent;
}

section {

    padding-top: 6rem;
    padding-bottom: 6rem;

}

.main-header {

  position: relative;

  min-height: 650px;
  height: 100vh;

  background: url("https://cdn.oreillystatic.com/en/assets/1/event/298/aica2019_og_image.jpg");
  background-position: center center;
  background-size: cover;
}

.bg-overlay {

  position: absolute;
  top: 0;

  width: 100%;
  height: 100%;

  background-color: rgba(var(--color-sigai-primary-rgb), 0.6);
}

.club-title {

  width: 80%;
  margin: auto !important;
}

.club-description {

  width: 60%;
  margin: auto !important;
  font-size: 23;
}

.main-header > .container {

  z-index: 1;

  margin-top: auto;
  margin-bottom: auto;

  color: white;
}

.main-header h1 {

    font-size: 4rem;
}

.main-header hr {

  border: 2px solid var(--color-sigai-primary-contrast);
  width: 75%;
}

.btn-listserve {

  color: var(--color-sigai-primary-contrast) !important;
  background-color: var(--color-sigai-primary-tint) !important;
}

.listserv-email {

  margin: auto;
  width: 85% !important;
}

.bg-sigai-tint {

  color: var(--color-sigai-primary-contrast);
  background-color: var(--color-sigai-primary-tint);
}

#contact h4 {

  margin-bottom: 20px;
}

#members hr {

  border: 2px solid var(--color-sigai-primary-contrast);
  margin-bottom: 30px;
}

.members img,
.admins img {

    border: 3px solid var(--color-sigai-primary-contrast);
    border-radius: 50%;
    width: 70%;
    margin-bottom: 10px;
}

.members p,
.admins p {

    font-size: 18px;
}


.socials img {

  margin: 3px;
}

.scrolled-past {

    background-color: white !important;
    color: black !important;
}

.navbar {

  top: 0 !important;
  left: 15% !important;
  width: 70% !important;

  border-radius: 0 0 60px 60px;
  background-color: white;
  padding: 8px 30px 8px 30px !important;
  filter: drop-shadow(1px 1px 6px black);
}

.navbar-icon {

    width: 56px;
    height: 56px;
}

.navbar-toggler {

  padding: 0 !important;
}

.nav-link,
.navbar-brand {

  color: var(--color-sigai-primary-tint);
}

.active {

  color: var(--color-sigai-primary-shade);
}

#home-link {

  display: none;
}

@media screen and (max-width: 991px) {

  .navbar {

    top: 5% !important;
    left: 0 !important;
    width: 90px !important;

    border-radius: 0 60px 60px 0;
    background-color: white;
    padding: 16px 8px 16px 8px !important;
    filter: drop-shadow(1px 1px 6px black);
  }

  .navbar-brand {

    display: none !important;
  }

  #home-link {
    display: initial;
  }
}

@media screen and (max-width: 767px) {

  .socials {

    margin-top: 2em;
  }
}

